// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`after-last-jsx-text.js format 1`] = `
====================================options=====================================
cursorOffset: 32
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<>a
  <div>
    hi
  </div>
  b
<|></>


=====================================output=====================================
<>
  a<div>hi</div>b
<|></>;

================================================================================
`;

exports[`after-tag.js format 1`] = `
====================================options=====================================
cursorOffset: 11
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<>a
  <div><|>
    hi
  </div>
</>

=====================================output=====================================
<>
  a<div><|>hi</div>
</>;

================================================================================
`;

exports[`before-first-jsx-text.js format 1`] = `
====================================options=====================================
cursorOffset: 2
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<><|>a
  <div>
    hi
  </div>
</>

=====================================output=====================================
<>
  <|>a<div>hi</div>
</>;

================================================================================
`;

exports[`before-tag.js format 1`] = `
====================================options=====================================
cursorOffset: 222
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// The cursor position we end up with in this test case is perverse. I think
// the cause is the one described in https://github.com/prettier/prettier/issues/15793.
// Remove this comment once the behavior is fixed.
<>a
  <|><div>
    hi
  </div>
</>

=====================================output=====================================
// The cursor position we end up with in this test case is perverse. I think
// the cause is the one described in https://github.com/prettier/prettier/issues/15793.
// Remove this comment once the behavior is fixed.
<>
  <|>a<div>hi</div>
</>;

================================================================================
`;

exports[`in-jsx-text.js format 1`] = `
====================================options=====================================
cursorOffset: 17
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<>a
  <div>
    h<|>i
  </div>
</>

=====================================output=====================================
<>
  a<div>h<|>i</div>
</>;

================================================================================
`;

exports[`in-tag.js format 1`] = `
====================================options=====================================
cursorOffset: 9
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<>a
  <di<|>v>
    hi
  </div>
</>

=====================================output=====================================
<>
  a<di<|>v>hi</div>
</>;

================================================================================
`;
